--- a/Programa Ejemplo/project1.ini
+++ b/Programa Ejemplo/project1.ini
@@ -1,10 +1,10 @@
 [colores]
-colFon=16777153
+colFon=12058623
 
 [texto]
-texto=.ol.
+texto=.Hello.
 numero=5
 
 [numeros]
 numero=5
-numero2=1
+numero2=10
